Use standardised JVM arguments